--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,10 @@ button {
     @media (max-width: 768px) {
         padding: 0 30px;
     }
+
+    @media (max-width: 425px) {
+        padding: 0 15px;
+    }
 }
 
 .btn {
