--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -53,8 +53,9 @@
             display: flex;
             flex-direction: column;
 
-            @media (max-width: 450px) {
-                width: calc(100vw - 40px);
+            @media (max-width: 425px) {
+                width: 100vw;
+                overflow-y: auto;
             }
         }
 
@@ -66,12 +67,21 @@
             height: 24px;
             cursor: pointer;
 
+            @media (max-width: 425px) {
+                top: 20px;
+                right: 20px;
+            }
+
             span {
                 position: absolute;
                 left: 0;
                 width: 100%;
                 height: 2px;
                 background-color: #fff;
+
+                @media (max-width: 425px) {
+                    background-color: #1E2E36;
+                }
 
                 &:nth-child(1) {
                     top: calc(50% - 1px);
@@ -229,6 +239,10 @@
         justify-content: space-between;
         position: relative;
         height: 105px;
+
+        @media (max-width: 425px) {
+            height: 60px;
+        }
     }
 
     &__menu-btn {
