--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -1,9 +1,17 @@
 .about {
     margin-bottom: 100px;
 
+    @media (max-width: 425px) {
+        margin-bottom: 0;
+    }
+
     &__container {
         position: relative;
         padding: 100px 0;
+
+        @media (max-width: 425px) {
+            padding: 50px 0;
+        }
     }
 
     &__title {
@@ -16,6 +24,11 @@
         position: relative;
         max-width: 791px;
         z-index: 1;
+
+        @media (max-width: 425px) {
+            padding: 20px;
+            margin-right: 15px;
+        }
 
         &::after {
             content: "";
