--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -1,13 +1,25 @@
 .contacts {
     margin-bottom: 109px;
 
+    @media (max-width: 425px) {
+        margin-bottom: 50px;
+    }
+
     &__title {
         margin-bottom: 50px;
+
+        @media (max-width: 425px) {
+            margin-left: 15px !important;
+        }
     }
 
     &__container {
         position: relative;
         padding: 100px 0;
+
+        @media (max-width: 425px) {
+            padding: 50px 0;
+        }
     }
 
     &__image {
@@ -27,6 +39,11 @@
 
         @media (max-width: 768px) {
             width: 100%;
+        }
+
+        @media (max-width: 425px) {
+            margin-left: 15px;
+            margin-right: 15px;
         }
 
         &::before {
