--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -33,6 +33,11 @@
 
     &__logo {
         margin-bottom: 50px;
+
+        @media (max-width: 425px) {
+            margin-bottom: 32px;
+            width: 200px;
+        }
     }
 
     &__nav {
@@ -43,6 +48,11 @@
 
         @media (max-width: 768px) {
             grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        @media (max-width: 425px) {
+            grid-template-columns: 1fr;
             gap: 20px;
         }
     }
